[gd_scene load_steps=12 format=3 uid="uid://d01glgh3iqa8e"]

[ext_resource type="Script" uid="uid://01djwcpigk8c" path="res://scripts/tela_inicial.gd" id="1_2o6u0"]
[ext_resource type="FontFile" uid="uid://djieajvy6x7uv" path="res://fonts/PressStart2P-Regular.ttf" id="2_hvj2l"]
[ext_resource type="Theme" uid="uid://cdckq1g3liufq" path="res://DefaultButton.tres" id="3_mxryr"]

[sub_resource type="GDScript" id="GDScript_whubj"]
script/source = "extends VBoxContainer


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2o6u0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_87508"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8cyla"]

[sub_resource type="Animation" id="Animation_u5cin"]
length = 0.001

[sub_resource type="Animation" id="Animation_uf8k0"]
resource_name = "fade_in"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2o6u0"]
resource_name = "anim1"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kqqgb"]
_data = {
&"RESET": SubResource("Animation_u5cin"),
&"anim1": SubResource("Animation_2o6u0"),
&"fade_in": SubResource("Animation_uf8k0")
}

[node name="TelaInicial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_2o6u0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1000.0
offset_bottom = 242.0
script = SubResource("GDScript_whubj")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4573998, 0.37463528, 0, 1)
theme_override_fonts/font = ExtResource("2_hvj2l")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxEmpty_2o6u0")
text = "Scape Dark"

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer/Label"]
layout_mode = 0
offset_left = 8.0
offset_top = -8.0
offset_right = 1008.0
offset_bottom = 92.0
theme_override_colors/font_color = Color(0.9656313, 0.8049337, 1.1551381e-06, 1)
theme_override_fonts/font = ExtResource("2_hvj2l")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxEmpty_2o6u0")
text = "Scape Dark"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_87508")

[node name="Start_bttn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_mxryr")
theme_override_colors/font_color = Color(0, 0, 0, 0.99215686)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 55
text = "Start"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_8cyla")

[node name="Quit_bttn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_mxryr")
theme_override_colors/font_color = Color(0, 0, 0, 0.99215686)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 55
text = "Quit"

[node name="BackGround" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kqqgb")
}
autoplay = "fade_in"

[connection signal="pressed" from="VBoxContainer/Start_bttn" to="." method="_on_start_bttn_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit_bttn" to="." method="_on_quit_bttn_pressed"]
